src/test/ui/underscore-lifetime/underscore-outlives-bounds.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/underscore-outlives-bounds.rs:7:10
   |
LL | impl<'b: '_> Foo<'b> for i32 {}
   |          ^^ expected named lifetime parameter
   |
help: consider using the `'b` lifetime
   |
LL | impl<'b: 'b> Foo<'b> for i32 {}
   |          ~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
